# compilators

./: CMakeLists.txt
include/: alphabet.hpp  automaton.hpp  cli.hpp  numeric-expresion.hpp  roman-numbers.hpp
src/: alphabet.cpp  arithmetic.cpp  autolang.lang  automaton.cpp  cli.cpp  languaje.cpp  main.cpp  numeric-expresions-cli.cpp  numeric-expresions.cpp  roman-numbers-cli.cpp  roman-numbers.auto  roman-numbers.cpp
test/: alphabet-test.cpp  numeric-expresions-test.cpp  roman-numbers-test.cpp
